# website

./: .pre-commit-config.yaml  CNAME  README.md  hugo.toml  pyproject.toml
.github/workflows/: deploy.yml  deployment.yml  pr-preview.yml
archetypes/: default.md
assets/: custom.css
config/_default/: hugo.json  hugo.toml  markup.json  menu.json  params.json  privacy.json  security.json
config/production/: hugo.json
content/: _index.md  about.md
content/blog/: test.md
content/posts/: ci_test.md  my-first-post.md
layouts/: index.html
layouts/_default/: list.html  single.html  terms.html
layouts/partials/: custom_head.html  header.html
public/: 404.html  index.html  index.xml  sitemap.xml
public/categories/: index.html  index.xml
public/posts/: index.html  index.xml
public/posts/my-first-post/: index.html
public/tags/: index.html  index.xml
