[tool.poetry]
name = "oscargilbalaguer-com"
version = "0.1.0"
description = "My personal website"
authors = ["Oscar Gil <hello@oscargilbalaguer.com>"]
readme = "README.md"
packages = [{include = "oscargilbalaguer"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
commitizen = "^4.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
