[project]
name = "oscargilbalaguer-com"
version = "0.1.0"
description = "My personal website"
authors = [{ name = "Oscar Gil", email = "hello@oscargilbalaguer.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0,<5",
    "commitizen>=4.2.1,<5",
]
